<resources>
    <string name="app_name">CVAppBuild</string>
    <string name="app_save">Save Profile</string>
    <string name="app_create">Create Profile</string>
    <string name="app_nxt">Next</string>
    <string name="app_add">Add Details</string>
    <string name="app_firstname">Firstname</string>
    <string name="app_lastname">Lastname</string>
    <string name="app_phone">Phone Number</string>
    <string name="app_emailid">Email Id</string>
    <string name="app_city">City</string>
    <string name="app_nationality">Nationality</string>
    <string name="app_dob">DOB(DD/MM/YYYY)</string>
    <string name="app_personal">Personal Details</string>
    <string name="app_load">Load</string>
    <string name="title_activity_profile">CV App</string>
    <string name="action_settings">Settings</string>
    <string name="app_home">Home</string>
    <string name="app_education_detail">Education Details</string>
    <string name="app_graduate">Course</string>
    <string name="app_univerity">University/Board</string>
    <string name="app_grade">Grade</string>
    <string name="app_yop">Passing Year</string>
    <string name="app_addskills">Primary Skills</string>
    <string name="app_otheraddskills">Total Experiences(years)</string>
    <string name="app_organization">Organization</string>
    <string name="app_yearto">To</string>
    <string name="app_yearfrom">From</string>
    <string name="app_projectdetails">Project Details</string>
    <string name="app_main_responsible">Responsibility</string>
    <string name="app_profession_summary">Professional Summary</string>
    <string name="app_role">Role</string>
    <string name="app_loading">Please wait,File is uploading</string>
    <string name="app_field_validation_msg">Please fill all the details</string>
    <string name="app_file_upload">Successfully Profile have been uploaded into the Firebase Cloud Storage.!</string>
    <string name="app_file_upload_failur">Your profile upload failure,please check you connection</string>
    <string name="app_msg">Message</string>
    <string name="app_ok">OK</string>
    <string name="personal_info_toolbar_title">Personal Details</string>
    <string name="app_prof_exp_toolbar_title">Professional Experience</string>
    <string name="app_eduinfo_toolbar_title">Education Details</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="tech_skill_toolbar_tittle">Technical Skills</string>
</resources>
