<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cvapp.assignment.views.HomeScreenActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:textAlignment="center"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/Toolbar">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Personal Details"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                android:visibility="visible" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_layout"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtfirstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_firstname"
                    android:inputType="textPersonName"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textLastLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtlastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_lastname"
                    android:inputType="textPersonName"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textdobLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtdob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_dob"
                    android:inputType="date"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textphoneLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_phone"
                    android:inputType="phone"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textEmailLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtemailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_emailid"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textcityLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtcityname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_city"
                android:inputType="text"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textnationLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtnationname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_nationality"
                android:inputType="text"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/load_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/app_load"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.9"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/app_nxt"
        android:textStyle="bold"
        android:typeface="sans" />

</RelativeLayout>
