<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cvapp.assignment.views.HomeScreenActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:textAlignment="center"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/Toolbar">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Skills/Experience"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                android:visibility="visible" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_layout"
        android:layout_margin="20dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:text="Professional Experiences"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLastLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtorganization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_organization"
                android:inputType="textPersonName|textNoSuggestions"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="sans" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textRoleLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtrole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_role"
                android:inputType="textPersonName|textNoSuggestions"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="sans" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textcityLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtdurafrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_yearfrom"
                    android:inputType="number|datetime"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:typeface="sans" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textLayTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtdurto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_yearto"
                    android:inputType="number|datetime"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:typeface="sans" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtresponsiblity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_main_responsible"
                android:inputType="textLongMessage|textMultiLine|textImeMultiLine|textNoSuggestions"
                android:maxLines="30"
                android:minLines="4"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="sans" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_addtech_skill"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.9"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/app_save"
        android:textStyle="bold"
        android:typeface="sans" />
</RelativeLayout>
