<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cvapp.assignment.views.HomeScreenActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:textAlignment="center"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/Toolbar">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Skills/Experience"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                android:visibility="visible" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_layout"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtcoreskill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_addskills"
                android:inputType="textLongMessage|textNoSuggestions"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="sans" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textOtherSkilLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txttotalexp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_otheraddskills"
                android:inputType="number|textNoSuggestions"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="sans" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtLayProfSumm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtProfSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_profession_summary"
                android:inputType="textLongMessage|textMultiLine|textImeMultiLine|textNoSuggestions"
                android:maxLines="30"
                android:minLines="4"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="sans" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>


    <Button
        android:id="@+id/btn_addtech_skill"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.9"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/app_nxt"
        android:textStyle="bold"
        android:typeface="sans" />

</RelativeLayout>
